# WordleSutom

./: Application.cpp  Application.h  CMakeLists.txt  gamestate.h  main.cpp
tests/: CMakeLists.txt
tests/auto/: CMakeLists.txt  main.cpp
tests/benchmarks/: CMakeLists.txt  main.cpp
